# Lab2

./: CMakeLists.txt  README.md
src/: Array.h  main.cpp
tests/: test.cpp
